# Ant

./: .gitignore  .gitmodules  CMakeLists.txt  CppCodingGuide.md  ddd.cpp  install.sh  readme.md
NeuralNetwork/NeuralNetwork/: NeuralNetwork.1  NeuralNetwork.cpp  NeuralNetwork.h  Support.cpp  Support.h  Trainer.cpp  Trainer.h  main.cpp
NeuralNetwork/Scripts/: cost.csv  cost1.csv  cost_function.txt  draw_cost.py  result.txt  run.py
NeuralNetwork/Scripts/digits.dataset.small/: cost.csv  fails.const001.delta0.txt  fails.delta5.areas.txt  fails.txt
app/: pool.cpp
app/bst/: bst_set_0.hpp  bst_set_1.hpp  bst_set_3.hpp  main.cpp
app/segment_intersections/: avl.hpp  comparable.hpp  simple_polygon.cpp  simple_polygon.hpp
app/triangulation/: main.cpp
benchmarks/: main.cpp
benchmarks/alloc/: local_resource.cpp  test.cpp
benchmarks/core/: flat_set.cpp  math.cpp  set_containers.cpp  skip_list_set.cpp
benchmarks/graph/: graph.cpp  graph.cxx  path.cpp  sp.cpp  sp.cxx
benchmarks/parallel/rcu/: qsbr.cpp
benchmarks/simd/: reverse.cpp
benchmarks/std/: shared_ptr.cpp  vector_bool.cpp
data/: 2d_seg_inter_0.txt  2d_seg_inter_1.txt  2d_seg_inter_2.txt  2d_seg_inter_3.txt  convex_hull.txt  points.txt  points_100.txt  points_1000.txt  points_col.txt  readme.txt
data/graph/: flow.txt  readme.txt  test_bfs_0.txt  undir_0.txt
data/grid/raceway/: neighbors.txt  raceway_01.txt  readme.txt  test_01.txt
docs/: abbreviations.md  graph.md  notes.txt  rcu.md  simd.md  todo.md
docs/ant/graph/: QA.md  graph.md  sp.md
docs/exploration/: alloc.md  graph.md  mutation.md
include/ant/: alg.h  array.h  bigint.h  bigint.hpp  core.h  event_throttle.hpp  graph.h  grid.h  grid.hpp  linear_algegra.h  machine_learning.h  optimization.h  simplex_method.h
include/ant/alloc/: alloc.hpp  fixed_buffer_resource.hpp  local_resource.hpp  ring_allocator.hpp  ring_resource.hpp  ring_resource_base.hpp
include/ant/core/: avl_set.hpp  avl_tree.hpp  bi_tree.hpp  bst.hpp  bst_set.hpp  complete_binary_tree.hpp  core.hpp  count_index.hpp  fixed_vector.hpp  flat_iterator.hpp  flat_set.hpp  knuth_morris_pratt.hpp  math.hpp  order_map.hpp  order_statistic_bst.hpp  range_count.hpp  range_min_interval.hpp  range_minmax.hpp  rb_tree.hpp  rb_tree_2.hpp  seg_tree.hpp  sequential_indexer.hpp  skip_list.hpp  skip_list_counter.hpp  skip_list_op.hpp  skip_list_set.hpp  sort.hpp  str.hpp  stream_fixed_vector.h  stream_fixed_vector.hpp  stream_vector_2.hpp  ternary_search_tree.hpp  wqueue.hpp
include/ant/core/range/: filter.hpp  flatten.hpp  range.hpp  transform.hpp  transform_itrerator.h
include/ant/core/skip_list/: set_indexed_reduce_base.hpp  skip_list_counter.hpp  skip_list_height_gen.hpp  skip_list_indexed.hpp  skip_list_iterator.hpp  skip_list_map.hpp  skip_list_op.hpp  skip_list_set.hpp  skip_list_set_indexed_reduce.hpp
include/ant/core/tree/: avl_map.hpp  avl_set.hpp  avl_tree.hpp  bst.hpp  bst_iterator.hpp  bst_iterator_stack.hpp  (+3 more)
include/ant/geometry/: bentley_ottmann.hpp  bentley_ottmann_2.hpp  d1.h  d1.hpp  d2.h  d2.hpp  delaunay_triangulation.hpp  doubly_conn_edge_list.hpp  kd_tree.hpp  polar.hpp  quadtree.hpp  segment_grid.hpp  segment_intersection.hpp
include/ant/graph/: bellman_ford.hpp  bfs.hpp  bfs_3.hpp  bipartite.hpp  cluster.hpp  component.hpp  cycle.hpp  edge_graph.hpp  flow.hpp  graph.h  graph.hpp  graph_1.hpp  graph_2.hpp  graph_3.hpp  graph_adj_list.hpp  graph_traits.hpp  graph_util.hpp  hld.hpp  johnson.hpp  junction_root_sp.hpp  partition.hpp  partition_sp.hpp  path.hpp  policies.hpp  sp.hpp  util.hpp  value_graph.hpp
include/ant/grid/: algorithms.hpp  grid.hpp
include/ant/linear_algebra/: glue.h  matrix.h  operations.h  quad_eq.hpp
include/ant/machine_learning/: neural_network.h
include/ant/optimization/: optimization.h
include/ant/parallel/: wqueue.hpp
include/ant/physics/: circle_collision_system.hpp
include/ant/simd/: reverse.hpp
include/ant/stats/: stats.hpp
include/test/core/: indexed.hpp  map.hpp  set.hpp  set_indexed.hpp  set_reduce.hpp
include/test/geometry/: d2.hpp
include/test/graph/: graph.hpp
scripts/: coverage.sh  draw_triangulation.py  install.sh
src/: bigint.cpp  core.cpp  graph.cpp  grid.cpp  machine_learning.cpp  simplex_method.cpp
src/alloc/: alloc.cpp
src/geometry/: d1.cpp  d2.cpp  quadtree.cpp
src/geometry/triangle/: triangle.cpp
src/optimization/tsp/: tsp.cpp  tsp_bb_cities.cpp  tsp_convex_hull.cpp  tsp_farthest_insertion.cpp  tsp_nearest_insertion.cpp  tsp_nearest_neighbor.cpp  tsp_random_insertion.cpp  tsp_shortest_edge.cpp
temp/: points.txt  points_100.txt  points_1000.txt
test/: bigint.cpp  core.cpp  event_throttle.cpp  grid.cpp  main.cpp  main.cxx  main1.cxx  test_simplex_method.py
test/TestBase/: main.cxx
test/TestLinAlg/: main.cxx
test/alloc/: local_resource.cpp  ring_allocator.cpp  ring_resource.cpp
test/core/: bst_set.cpp  clusters.cpp  count_index.cpp  duration.cpp  flat_iterator.cpp  flat_set.cpp  knuth_morris_pratt.cpp  math.cpp  order_map.cpp  range_count.cpp  range_minmax.cpp  rb_tree.cpp  sequential_indexer.cpp  set.cpp  skip_list.cpp  skip_list_set.cpp  stream_fixed_vector.cpp  vector_set.cpp  wqueue.cpp  zip_range.cpp
test/core/range/: filter.cpp  flatten.cpp
test/core/skip_list/: skip_list_indexed.cpp  skip_list_map.cpp  skip_list_set.cpp  skip_list_set_indexed_reduce.cpp
test/core/tree/: avl_tree.cpp
test/geometry/: bentley_ottmann.cpp  bentley_ottmann_2.cpp  convex_hull.cpp  d2.cpp  point_location.cpp  quadtree.cpp  segment_intersection.cpp  triangle.cpp
test/graph/: flow.cxx  graph.cpp  graph.cxx  graph_1.cpp  partition.cpp  partition_sp.cpp  partition_sp.cxx  path.cpp  sp.cpp
test/graph/algo/: bfs.cpp  dijkstra_components.cpp  sp.cpp
test/graph/model/: policies.cpp
test/grid/: grid.cpp
test/gtest/: gtest-all.cc
test/linear_algebra/: matrix.cpp  quad_eq.cpp
test/maching_learning/: knn_test.cpp
test/optimization/: ant_colony.cpp  optimization.cpp
test/parallel/: wqueue.cpp
test/parallel/rcu/: queue.cpp  queue_defer.cpp  unordered_map.cpp
test/simd/: reverse.cpp
(+112 files in other folders)
